Jan 18th Assignment

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
    <h1>Wednesday Jan 14th</h1> 
-   <h2> Greetings from Victoria</h2>
+   <h2> Greetings from Victoria, Friday is my favorite day of the week</h2>
+   <p> Catchphrase: Fame is a mask that eats the face</p>
 </body>
 </html>
