--- a/questionator.html
+++ b/questionator.html
@@ -10,6 +10,9 @@
 
         <li>What European city is the HQ for Google? <button onclick="answer1()">Hint</button></li>
 
+        <li>What is the best food in the world? <button onclick="answer2()">Hint</button></li>
+
+
     </ol>
 
 </body>
@@ -18,6 +21,12 @@
     function answer1() {
 
         alert(".. someone in here now, may be from there..")
+
+    }
+
+    function answer2() {
+
+        alert(".. you are still wrong..")
 
     }
 
